--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    implementation 'com.github.WhatWeCan:TCPClient:v1.0.2'
+    implementation 'com.yanzhenjie:okalle:0.1.4'//网络请求框架
     implementation project(':baseutils')
 }
