--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".activity.SocketActivity" />
         <activity android:name=".activity.LoginUtilsUserDemoActivity" />
+        <activity android:name=".activity.HttpUtilsActivity" />
     </application>
 
 </manifest>
